# CroMagRally

./: .dockerignore  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  build.py  build.sh  conanfile.py  fly.toml  meson.build  meson_options.txt  render.yaml
.github/workflows/: AutoTag.yml  FullCompileCheck.yml  PrebuildDeps.yml  ReleaseBuilds.yml  deploy-signaling.yml
Data/System/: strings.csv  twitch.csv
Source/3D/: OGL_Support.c
Source/Backend/: Backend.h  Backend_GNS.cpp  Backend_Network.c  Backend_Network.cpp  Backend_Network.h  Backend_Yojimbo.cpp  Yojimbo_Messages.h
Source/Headers/: game.h  input.h  localization.h  miscscreens.h  network.h  notifications.h  objects.h  ogl_support.h  uieffects.h  version.h
Source/Player/: Player.c  Player_Car.c  Player_Submarine.c  Player_Weapons.c
Source/Screens/: Infobar.c  MainMenu.c  NetworkGather.c  Notifications.c  RaceTimes.c  SelectCharacter.c  SelectVehicle.c  UIEffects.c
Source/System/: InputControlBits.c  InputDefaults.c  Main.c  Menu.c  network.c  network.cpp
cmake/: FindSDL3.cmake  mingw-w64-toolchain.cmake
common/: log.h  net_protocol.h
packaging/: CroMagRally.exe.rc  ReadMe.txt.in  io.jor.cromagrally.appdata.xml  io.jor.cromagrally.desktop  win32.rc.in
scripts/: mingw-bundledlls
server/: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile  build.sh  meson.build
server/src/: main.cpp
server/src/protocol/: Protocol.h
server/src/relay/: Room.cpp  Room.h  Server.cpp  Server.h
signaling-server/: CMakeLists.txt  Dockerfile  README.md  fly.toml  main.c  room.c  room.h  signaling.c  signaling.h
yojimbo-server/: CMakeLists.txt  Dockerfile  fly.toml  main.cpp
